# my-docker-templete

./: README.md
python/: README.md
python/fastapi/: Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
python/jupyter/: README.md
python/jupyter/app/: Dockerfile  compose.yml  pyproject.toml  requirements.txt
