[project]
name = "fastapi-app"
version = "0.1.0"
description = "A new FastAPI application"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[fastapi,standard]>=0.29.0",
    "psycopg-binary>=3.1.19",
]
requires-python = ">= 3.13"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]


