[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gild-shogi", email = "ok2336.coffee@gmail.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.0",
    "jupyterlab>=4.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
