[project]
name = "app"
version = "0.1.0"
description = "Add your description here"

dependencies = [
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.0",
    "jupyterlab>=4.2.2",
    "numpy>=2.3.1",
]

requires-python = ">= 3.13"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

